[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
colored = "3.0.0"
config = "0.15.11"
configparser = "3.1.0"
rand = "=0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
